--- a/package.json
+++ b/package.json
@@ -21,5 +21,23 @@
   "bugs": {
     "url": "https://github.com/0xa10/torrent-cast/issues"
   },
-  "homepage": "https://github.com/0xa10/torrent-cast#readme"
+  "homepage": "https://github.com/0xa10/torrent-cast#readme",
+  "dependencies": {
+    "airplayer": "^2.0.0",
+    "body-parser": "^1.17.1",
+    "dlnacasts": "^0.1.0",
+    "express": "^4.15.2",
+    "fifo": "^2.3.0",
+    "inherits": "^2.0.3",
+    "mime": "^1.3.4",
+    "network-address": "^1.1.2",
+    "node-cleanup": "^2.1.2",
+    "pump": "^1.0.2",
+    "range-parser": "^1.2.0",
+    "rimraf": "^2.6.1",
+    "shortid": "^2.2.8",
+    "simple-websocket": "^5.0.2",
+    "urlencode": "^1.1.0",
+    "webtorrent": "^0.98.18"
+  }
 }
