--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fifo": "^2.3.0",
     "inherits": "^2.0.3",
     "mime": "^1.3.4",
+    "mkdirp": "^0.5.1",
     "network-address": "^1.1.2",
     "node-cleanup": "^2.1.2",
     "pump": "^1.0.2",
